syntax = "proto3";

package ReportService;

//import "timestamp.proto";

message OperationPackage
{
	int64 Created=1;
	string OperationName=2;

	repeated DataSet DataSets=15; //if need to add any no-repeated fields,can place them at 3-14
}

message DataSet
{
	string Name=1;
	repeated ColumnInfo Columns=2; //maybe 14-15 tags instead of 2-3?
	repeated Row Rows=3;
}

message ColumnInfo
{
	string Name=1;
	ScalarType Type=2;
	bool Nullable=3;
}

enum ScalarType
{
	Unknown=0;
	Int32=1;
	Double=2;
	Int64=3;
	Bool=4;
	String=5;
	Bytes=6;
	DateTime=7;
	TimeStamp=8;
	//Can add other if needed.
}

message Row
{
	repeated VariantValue Values=1;
}

message VariantValue
{
	int32 Int32Value=1;
	double DoubleValue=2;
	int64 Int64Value=3;
	bool BoolValue=4;
	string StringValue=5;
	bytes BytesValue=6;
	int64 DateTime=7;
	//google.protobuf.Timestamp TimeStamp=8;

	bool IsNull=15; 
}